<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="220dp"

        android:layout_height="match_parent">

        <TextView
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:text="Adopter"
            android:textColor="#78C257"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
       <!-- <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Email"
            android:textSize="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"

            />-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
       <!-- <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Password"
            android:textSize="20dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"
            />-->

        <Button
            android:id="@+id/btn_loginn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"

            android:backgroundTint="#78C257"
            android:text="@string/login"

            />

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/registerNow"
            android:text="@string/click_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <!--<TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Click here to register"
            android:textSize="20dp"
            android:layout_marginHorizontal="40dp"

            />-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>